--- a/src/main/resources/templates/evento/eventoFSCShow.html
+++ b/src/main/resources/templates/evento/eventoFSCShow.html
@@ -178,8 +178,8 @@
 						</label>
 
 						<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-							<div class="value" th:if="${eventoWrapper.evento.tipologiaEvento != null}" th:text="${eventoWrapper.evento.tipologiaEvento.nome}"></div>
-							<div class="value danger" th:unless="${eventoWrapper.evento.tipologiaEvento != null}" th:text="#{label.dato_non_inserito}"></div>
+							<div class="value" th:if="${eventoWrapper.evento.tipologiaEventoFSC != null}" th:text="${eventoWrapper.evento.tipologiaEventoFSC.nome}"></div>
+							<div class="value danger" th:unless="${eventoWrapper.evento.tipologiaEventoFSC != null}" th:text="#{label.dato_non_inserito}"></div>
 						</div>
 					</div>
 
@@ -225,8 +225,8 @@
 <!-- 						</label> -->
 
 <!-- 						<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12"> -->
-<!-- 							<div class="value" th:if="${eventoWrapper.evento.tipologiaEvento != null}" th:text="${eventoWrapper.evento.tipologiaEvento.nome}"></div> -->
-<!-- 							<div class="value danger" th:unless="${eventoWrapper.evento.tipologiaEvento != null}" th:text="#{label.dato_non_inserito}"></div> -->
+<!-- 							<div class="value" th:if="${eventoWrapper.evento.tipologiaEventoFSC != null}" th:text="${eventoWrapper.evento.tipologiaEventoFSC.nome}"></div> -->
+<!-- 							<div class="value danger" th:unless="${eventoWrapper.evento.tipologiaEventoFSC != null}" th:text="#{label.dato_non_inserito}"></div> -->
 <!-- 						</div> -->
 <!-- 					</div> -->
 
