--- a/src/main/resources/templates/evento/eventoRESEdit.html
+++ b/src/main/resources/templates/evento/eventoRESEdit.html
@@ -617,7 +617,7 @@
 
 										<!-- BLOCCO TIPOLOGIA DI EVENTO -->
 										<!-- TIPOLOGIA DELL'EVENTO -->
-										<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.tipologiaEvento')} ? 'bad'">
+										<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.tipologiaEventoRES')} ? 'bad'">
 											<label class="control-label col-xs-1">
 												<span>17</span>
 											</label>
@@ -629,7 +629,7 @@
 											<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
 												<select id="tipologia_evento"
 													class="selectpicker"
-													th:field="${eventoWrapper.evento.tipologiaEvento}"
+													th:field="${eventoWrapper.evento.tipologiaEventoRES}"
 													data-width="100%" data-style="btn-primary"
 													data-actions-box="true" data-size="10"
 													data-hide-disabled="false"
@@ -642,7 +642,7 @@
 													</option>
 												</select>
 											</div>
-											<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.tipologiaEvento')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.tipologiaEvento')}__}"></div>
+											<div th:if="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.tipologiaEventoRES')}" class="alert" th:text="#{__${eventoWrapper.mappaErroriValidazione.get('evento.tipologiaEventoRES')}__}"></div>
 										</div>
 										<!-- WORKSHOP/SEMINARI (attivo se selezionato convegno/congresso) -->
 										<div class="item form-group convegno-congresso" style="display: none;" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.workshopSeminariEcm')} ? 'bad'">
