--- a/src/main/resources/templates/evento/eventoFADShow.html
+++ b/src/main/resources/templates/evento/eventoFADShow.html
@@ -181,8 +181,8 @@
 						</label>
 
 						<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-							<div class="value" th:if="${eventoWrapper.evento.tipologiaEvento != null}" th:text="${eventoWrapper.evento.tipologiaEvento.nome}"></div>
-							<div class="value danger" th:unless="${eventoWrapper.evento.tipologiaEvento != null}" th:text="#{label.dato_non_inserito}"></div>
+							<div class="value" th:if="${eventoWrapper.evento.tipologiaEventoFAD != null}" th:text="${eventoWrapper.evento.tipologiaEventoFAD.nome}"></div>
+							<div class="value danger" th:unless="${eventoWrapper.evento.tipologiaEventoFAD != null}" th:text="#{label.dato_non_inserito}"></div>
 						</div>
 					</div>
 
