--- a/src/main/resources/templates/evento/eventoRESShow.html
+++ b/src/main/resources/templates/evento/eventoRESShow.html
@@ -225,12 +225,12 @@
 						</label>
 
 						<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12">
-							<div class="value" th:if="${eventoWrapper.evento.tipologiaEvento != null}" th:text="${eventoWrapper.evento.tipologiaEvento.nome}"></div>
-							<div class="value danger" th:unless="${eventoWrapper.evento.tipologiaEvento != null}" th:text="#{label.dato_non_inserito}"></div>
+							<div class="value" th:if="${eventoWrapper.evento.tipologiaEventoRES != null}" th:text="${eventoWrapper.evento.tipologiaEventoRES.nome}"></div>
+							<div class="value danger" th:unless="${eventoWrapper.evento.tipologiaEventoRES != null}" th:text="#{label.dato_non_inserito}"></div>
 						</div>
 					</div>
 					<!-- WORKSHOP/SEMINARI (attivo se selezionato convegno/congresso) -->
-					<div class="item form-group" th:if="${eventoWrapper.evento.tipologiaEvento == 'CONVEGNO_CONGRESSO'}">
+					<div class="item form-group" th:if="${eventoWrapper.evento.tipologiaEventoRES == 'CONVEGNO_CONGRESSO'}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
 							<span class="label-show" th:text="#{label.workshop_radio_text}"></span>
 						</label>
@@ -241,7 +241,7 @@
 						</div>
 					</div>
 					<!-- TITOLO CONVEGNO (attivo se selezionato workshop/seminario) -->
-					<div class="item form-group" th:if="${eventoWrapper.evento.tipologiaEvento == 'WORKSHOP_SEMINARIO'}">
+					<div class="item form-group" th:if="${eventoWrapper.evento.tipologiaEventoRES == 'WORKSHOP_SEMINARIO'}">
 						<div class="col-xs-1"></div><label class="control-label col-md-3 col-sm-3 col-xs-11">
 							<span class="label-show" th:text="#{label.titolo_convegno}"></span>
 						</label>
