--- a/src/main/resources/templates/comunicazione/comunicazioneDashboard.html
+++ b/src/main/resources/templates/comunicazione/comunicazioneDashboard.html
@@ -16,6 +16,9 @@
 									th:if="${canSendComunicazione}"
 									th:href="@{/comunicazione/new}"
 									th:text="#{label.componi}">Componi</a>
+							<a th:if="${#authentication.principal.hasProfile('SEGRETERIA')}" class="btn btn-success pull-right"
+									th:href="@{/comunicazione/cerca}"
+									th:text="#{label.cerca}">Cerca</a>
 							<a class="btn btn-primary pull-right"
 									th:href="@{/home}"
 									th:text="#{label.indietro}">Indietro</a>
