--- a/src/main/resources/templates/provider/providerList.html
+++ b/src/main/resources/templates/provider/providerList.html
@@ -35,7 +35,11 @@
 									<td th:text="${provider.canInsertEvento ? #messages.msg('label.abilitato') : #messages.msg('label.non_abilitato')}" th:class="${provider.canInsertEvento ? 'green' : 'red'}">abilitato/non abilitato</td>
 									<td th:text="${provider.canInsertAccreditamentoStandard ? #messages.msg('label.abilitato') : #messages.msg('label.non_abilitato')}" th:class="${provider.canInsertAccreditamentoStandard ? 'green' : 'red'}">abilitato/non abilitato</td>
 									<td>
-										<a th:href="@{|/provider/${provider.id}/comunicazione/list|}" class="btn btn-primary" th:title="#{label.comunicazioni_provider}"><i class="fa fa-comments"> </i></a>
+										<a th:href="@{|/provider/${provider.id}/comunicazione/list|}" class="btn btn-primary min-icon-width" th:title="#{label.comunicazioni_provider}"><i class="fa fa-comments"> </i></a>
+										<a th:href="@{|/provider/${provider.id}/evento/list|}" class="btn btn-primary min-icon-width" th:title="#{label.eventi_provider}"><i class="fa fa-pencil-square-o"> </i></a>
+										<a th:href="@{|/provider/${provider.id}/pianoFormativo/list|}" class="btn btn-primary min-icon-width" th:title="#{label.pfa_provider}"><i class="fa fa-calendar-o"> </i></a>
+										<a th:href="@{|/provider/${provider.id}/relazioneAnnuale/list|}" class="btn btn-primary min-icon-width" th:title="#{label.relazione_annuale_provider}"><i class="fa fa-file-text"> </i></a>
+										<a th:href="@{|/provider/${provider.id}/pagamento/list|}" class="btn btn-primary min-icon-width" th:title="#{label.contributo_annuale_provider}"><i class="fa fa-euro"> </i></a>
 									</td>
 								</tr>
 							</tbody>
@@ -53,10 +57,6 @@
 
 				$(document).ready(function() {
 					$("#datatable-provider").DataTable({
-						"bFilter" : false,
-						"bInfo" : false,
-						"bPaginate" : false,
-						"ordering" : false,
 						"columnDefs": [ {
 							"targets": 6,
 							"width": "1px",
