modifica segreteria può modificare evento sempre

--- a/src/main/resources/templates/evento/eventoFADEdit.html
+++ b/src/main/resources/templates/evento/eventoFADEdit.html
@@ -26,9 +26,9 @@
 
 								<th:block th:with="isRiedizione=${eventoWrapper.evento.isRiedizione()},
 										isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
-										isEditSemiBloccato=${eventoWrapper.editSemiBloccato},
-										isEventoIniziato=${eventoWrapper.eventoIniziato},
-										hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions}">
+										isEditSemiBloccato=${eventoWrapper.editSemiBloccato and !#authentication.principal.hasProfile('SEGRETERIA')},
+										isEventoIniziato=${eventoWrapper.eventoIniziato and !#authentication.principal.hasProfile('SEGRETERIA')},
+										hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions and !#authentication.principal.hasProfile('SEGRETERIA')}">
 
 								<!-- ARGOMENTO -->
 								<div id="container-argomento" class="item form-group">
@@ -202,9 +202,9 @@
 
 								<th:block th:with="isRiedizione=${eventoWrapper.evento.isRiedizione()},
 										isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
-										isEditSemiBloccato=${eventoWrapper.editSemiBloccato},
-										isEventoIniziato=${eventoWrapper.eventoIniziato},
-										hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions}">
+										isEditSemiBloccato=${eventoWrapper.editSemiBloccato and !#authentication.principal.hasProfile('SEGRETERIA')},
+										isEventoIniziato=${eventoWrapper.eventoIniziato and !#authentication.principal.hasProfile('SEGRETERIA')},
+										hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions and !#authentication.principal.hasProfile('SEGRETERIA')}">
 
 								<!-- TODO rimuovere -->
 <!-- 								<div th:text="'MAPPA ERRORI VALIDAZIONE: '+${eventoWrapper.mappaErroriValidazione}"></div> -->
@@ -598,10 +598,10 @@
 										th:each="risultato, row : ${eventoWrapper.risultatiAttesiMapTemp}"
 										th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'risultatiAttesiMapTemp[__${risultato.key}__]') or #maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.risultatiAttesi')} ? 'bad'">
 											<th:block th:with="isRiedizione=${eventoWrapper.evento.isRiedizione()},
-												isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
-												isEditSemiBloccato=${eventoWrapper.editSemiBloccato},
-												isEventoIniziato=${eventoWrapper.eventoIniziato},
-												hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions}">
+													isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
+													isEditSemiBloccato=${eventoWrapper.editSemiBloccato and !#authentication.principal.hasProfile('SEGRETERIA')},
+													isEventoIniziato=${eventoWrapper.eventoIniziato and !#authentication.principal.hasProfile('SEGRETERIA')},
+													hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions and !#authentication.principal.hasProfile('SEGRETERIA')}">
 										<div class='col-md-4 col-sm-4 col-xs-12'></div>
 										<div class="col-lg-5 col-md-7 col-sm-7 col-xs-12 input-group risultatoAttesoPick">
 											<input type="hidden" th:value="${risultato.key}" />
@@ -629,9 +629,9 @@
 
 								<th:block th:with="isRiedizione=${eventoWrapper.evento.isRiedizione()},
 										isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
-										isEditSemiBloccato=${eventoWrapper.editSemiBloccato},
-										isEventoIniziato=${eventoWrapper.eventoIniziato},
-										hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions}">
+										isEditSemiBloccato=${eventoWrapper.editSemiBloccato and !#authentication.principal.hasProfile('SEGRETERIA')},
+										isEventoIniziato=${eventoWrapper.eventoIniziato and !#authentication.principal.hasProfile('SEGRETERIA')},
+										hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions and !#authentication.principal.hasProfile('SEGRETERIA')}">
 
 								<!-- PROGRAMMA EVENTO -->
 <!-- 								METTERE QUA IL PROGRAMMA -->
@@ -666,9 +666,9 @@
 
 								<th:block th:with="isRiedizione=${eventoWrapper.evento.isRiedizione()},
 										isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
-										isEditSemiBloccato=${eventoWrapper.editSemiBloccato},
-										isEventoIniziato=${eventoWrapper.eventoIniziato},
-										hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions}">
+										isEditSemiBloccato=${eventoWrapper.editSemiBloccato and !#authentication.principal.hasProfile('SEGRETERIA')},
+										isEventoIniziato=${eventoWrapper.eventoIniziato and !#authentication.principal.hasProfile('SEGRETERIA')},
+										hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions and !#authentication.principal.hasProfile('SEGRETERIA')}">
 
 								<!-- VERIFICA APPRENDIMENTO PARTECIPANTI -->
 								<div class="item form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.verificaApprendimento')} ? 'bad'">
@@ -1273,10 +1273,10 @@
 				});
 
 				function initAll(){
-					
+
 					$("#add-attivitaFAD-modal").draggable({
 						handle: ".modal-content"
-					}); 
+					});
 
 					$('input.flat').iCheck({
 			            checkboxClass: 'icheckbox_flat-green',
