--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -1207,10 +1207,10 @@
 				<label class="col-xs-offset-4 col-xs-4" th:text="#{label.nessun_responsabile_registrato}"></label>
 			</th:block> -->
 			<th:block th:with="isRiedizione=${eventoWrapper.evento.isRiedizione()},
-				isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
-				isEditSemiBloccato=${eventoWrapper.editSemiBloccato},
-				isEventoIniziato=${eventoWrapper.eventoIniziato},
-				hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions}">
+					isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
+					isEditSemiBloccato=${eventoWrapper.editSemiBloccato and !#authentication.principal.hasProfile('SEGRETERIA')},
+					isEventoIniziato=${eventoWrapper.eventoIniziato and !#authentication.principal.hasProfile('SEGRETERIA')},
+					hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions and !#authentication.principal.hasProfile('SEGRETERIA')}">
 			<table id="responsabiliScientifici" class="datatable-responsive-responsabili table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%"
 				th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.responsabili')} ? 'bad-table'">
 				<thead>
@@ -1272,10 +1272,10 @@
 	<th:block style="display:none">
 		<div class="col-xs-12" th:fragment="docenti">
 			<th:block th:with="isRiedizione=${eventoWrapper.evento.isRiedizione()},
-				isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
-				isEditSemiBloccato=${eventoWrapper.editSemiBloccato},
-				isEventoIniziato=${eventoWrapper.eventoIniziato},
-				hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions}">
+					isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
+					isEditSemiBloccato=${eventoWrapper.editSemiBloccato and !#authentication.principal.hasProfile('SEGRETERIA')},
+					isEventoIniziato=${eventoWrapper.eventoIniziato and !#authentication.principal.hasProfile('SEGRETERIA')},
+					hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions and !#authentication.principal.hasProfile('SEGRETERIA')}">
 			<table id="docenti" class="datatable-responsive-docenti table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%"
 				th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.docenti')} ? 'bad-table'">
 				<thead>
@@ -1340,10 +1340,10 @@
 	<th:block style="display:none">
 		<div class="col-xs-12" th:fragment="responsabileSegreteria">
 			<th:block th:with="isRiedizione=${eventoWrapper.evento.isRiedizione()},
-				isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
-				isEditSemiBloccato=${eventoWrapper.editSemiBloccato},
-				isEventoIniziato=${eventoWrapper.eventoIniziato},
-				hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions}">
+					isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
+					isEditSemiBloccato=${eventoWrapper.editSemiBloccato and !#authentication.principal.hasProfile('SEGRETERIA')},
+					isEventoIniziato=${eventoWrapper.eventoIniziato and !#authentication.principal.hasProfile('SEGRETERIA')},
+					hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions and !#authentication.principal.hasProfile('SEGRETERIA')}">
 			<table id="responsabileSegreteria" class="datatable-responsive-responsabileSegreteria table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%"
 				th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.responsabileSegreteria')} ? 'bad-table'">
 				<thead>
@@ -1404,9 +1404,9 @@
 		<div class="col-xs-12" th:fragment="sponsors">
 			<th:block th:with="isRiedizione=${eventoWrapper.evento.isRiedizione()},
 					isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
-					isEditSemiBloccato=${eventoWrapper.editSemiBloccato},
-					isEventoIniziato=${eventoWrapper.eventoIniziato},
-					hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions}">
+					isEditSemiBloccato=${eventoWrapper.editSemiBloccato and !#authentication.principal.hasProfile('SEGRETERIA')},
+					isEventoIniziato=${eventoWrapper.eventoIniziato and !#authentication.principal.hasProfile('SEGRETERIA')},
+					hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions and !#authentication.principal.hasProfile('SEGRETERIA')}">
 			<table id="sponsors" class="datatable-responsive-sponsors table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%"
 				th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.sponsors')} ? 'bad-table'">
 				<thead>
@@ -1451,10 +1451,10 @@
 	<th:block style="display:none">
 		<div class="col-xs-12" th:fragment="partners">
 			<th:block th:with="isRiedizione=${eventoWrapper.evento.isRiedizione()},
-				isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
-				isEditSemiBloccato=${eventoWrapper.editSemiBloccato},
-				isEventoIniziato=${eventoWrapper.eventoIniziato},
-				hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions}">
+					isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
+					isEditSemiBloccato=${eventoWrapper.editSemiBloccato and !#authentication.principal.hasProfile('SEGRETERIA')},
+					isEventoIniziato=${eventoWrapper.eventoIniziato and !#authentication.principal.hasProfile('SEGRETERIA')},
+					hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions and !#authentication.principal.hasProfile('SEGRETERIA')}">
 			<table id="partners" class="datatable-responsive-partners table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%"
 				th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.partners')} ? 'bad-table'">
 				<thead>
@@ -1500,10 +1500,10 @@
 	<th:block style="display:none">
 		<div class="col-xs-12" th:fragment="attivitaRES">
 			<th:block th:with="isRiedizione=${eventoWrapper.evento.isRiedizione()},
-				isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
-				isEditSemiBloccato=${eventoWrapper.editSemiBloccato},
-				isEventoIniziato=${eventoWrapper.eventoIniziato},
-				hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions}">
+					isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
+					isEditSemiBloccato=${eventoWrapper.editSemiBloccato and !#authentication.principal.hasProfile('SEGRETERIA')},
+					isEventoIniziato=${eventoWrapper.eventoIniziato and !#authentication.principal.hasProfile('SEGRETERIA')},
+					hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions and !#authentication.principal.hasProfile('SEGRETERIA')}">
 			<div id="attivitaRES">
 				<div th:id="${'attivitaRES-' + __${status.index}__}" class="col-xs-12"
 						th:each="data , status : ${eventoWrapper.eventoRESDateProgrammiGiornalieriWrapper.sortedProgrammiGiornalieriMap}"
@@ -1676,10 +1676,10 @@
 	<th:block style="display:none">
 		<div class="col-xs-12" th:fragment="attivitaFSC">
 			<th:block th:with="isRiedizione=${eventoWrapper.evento.isRiedizione()},
-				isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
-				isEditSemiBloccato=${eventoWrapper.editSemiBloccato},
-				isEventoIniziato=${eventoWrapper.eventoIniziato},
-				hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions}">
+					isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
+					isEditSemiBloccato=${eventoWrapper.editSemiBloccato and !#authentication.principal.hasProfile('SEGRETERIA')},
+					isEventoIniziato=${eventoWrapper.eventoIniziato and !#authentication.principal.hasProfile('SEGRETERIA')},
+					hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions and !#authentication.principal.hasProfile('SEGRETERIA')}">
 			<div id="attivitaFSC">
 				<div th:id="${'attivitaFSC-' + __${status.index}__}" class="col-xs-12" th:each="fase , status : ${eventoWrapper.programmaEventoFSC}"  th:with="fase=${eventoWrapper.programmaEventoFSC[__${status.index}__].faseDiLavoro}">
 
@@ -1775,10 +1775,10 @@
 	<th:block style="display:none">
 		<div class="col-xs-12" th:fragment="attivitaFAD">
 			<th:block th:with="isRiedizione=${eventoWrapper.evento.isRiedizione()},
-				isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
-				isEditSemiBloccato=${eventoWrapper.editSemiBloccato},
-				isEventoIniziato=${eventoWrapper.eventoIniziato},
-				hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions}">
+					isFromPianoFormativo=${eventoWrapper.evento.isEventoDaPianoFormativo()},
+					isEditSemiBloccato=${eventoWrapper.editSemiBloccato and !#authentication.principal.hasProfile('SEGRETERIA')},
+					isEventoIniziato=${eventoWrapper.eventoIniziato and !#authentication.principal.hasProfile('SEGRETERIA')},
+					hasDataInizioRestrictions=${eventoWrapper.hasDataInizioRestrictions and !#authentication.principal.hasProfile('SEGRETERIA')}">
 			<div id="attivitaFAD" th:if="${eventoWrapper.programmaEventoFAD != null}">
 				<div class="col-xs-12 item alert-tabella-evento form-group" th:classappend="${#maps.containsKey(eventoWrapper.mappaErroriValidazione, 'evento.programmaFAD')} ? 'bad'">
 					<label class="col-lg-9 col-md-11 col-sm-11 col-xs-12" th:text="#{label.dettaglio_attivita}">Dettaglio Attività</label>
