Bugfix tooltip in conflitto con draggable

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -130,8 +130,8 @@
 		</th:block>
 		
 		<!-- jquery ui per modale draggable -->
-		<script src="../static/js/jquery-ui.min.js"
-				th:src="@{/js/jquery-ui.min.js}"></script>
+		<script src="../static/js/draggable/jquery-ui.js"
+				th:src="@{/js/draggable/jquery-ui.js}"></script>
 			
 		<!-- initialize the validator.js  -->
 		<script th:inline="javascript">
