--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -87,8 +87,8 @@
 				
 		 	<!-- jquery -->
  			<link rel="stylesheet"
-				href="..static/css/jquery-ui.min.css"
-				th:href="@{/css/jquery-ui.min.css}" />
+				href="..static/css/draggable/jquery-ui.css"
+				th:href="@{/css/draggable/jquery-ui.css}" />
 				
 
 			<!-- select2 -->
